# DanmuView

./: .gitignore  README.md  settings.gradle
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/huxq17/danmuview/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/huxq17/danmuview/: DanmuReceiver.java  FirstActivity.java  MainActivity.java
app/src/main/java/com/huxq17/danmuview/controller/: BaseDanmuView.java  DanmuExt.java  DanmuHandler.java  DanmuKu.java  DrawTask.java  IDanmuView.java
app/src/main/java/com/huxq17/danmuview/danmu/: Danmu.java  DanmuMode.java  Route.java
app/src/main/java/com/huxq17/danmuview/listener/: DataChangedListener.java  OnFPSChangedListener.java
app/src/main/java/com/huxq17/danmuview/objectpool/: ObjectPool.java  Pools.java
app/src/main/java/com/huxq17/danmuview/render/: GLRender.java  IRender.java  NormalRender.java
app/src/main/java/com/huxq17/danmuview/utils/: DanmuUtil.java  DensityUtil.java  DrawStatistics.java  EGLHelper.java  OpenGLUtil.java
app/src/main/java/com/huxq17/danmuview/widget/: DanmuView.java  EGLTextureView.java  GLDanmuView.java  TextureDanmuView.java
app/src/main/jni/: GL3.cpp  GL3.h  OpenGLJni.cpp
app/src/main/res/layout/: activity_first.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/huxq17/danmuview/: ExampleUnitTest.java
captures/: com.huxq17.danmuview_2017.07.07_11.45.alloc
gradle/wrapper/: gradle-wrapper.properties
